// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideItem render as aliased dependency 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-light">
              <span class="rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none -mx-1">
                aliased-item
              </span>
              <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
                as
              </span>
            </span>
            <span class="font-medium">
              item
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              npm:item@^1.0.0
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div
      class="absolute -left-[9px] bottom-[62px] z-0 h-[13.35rem] h-[5px] w-[9px] rounded-bl-sm border-b border-l border-solid border-muted group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24"
      style="height: -258px;"
    >
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependency 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              ^1.0.0
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
              peer
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div
      class="absolute -left-[9px] bottom-[62px] z-0 h-[13.35rem] h-[5px] w-[9px] rounded-bl-sm border-b border-l border-solid border-muted group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24"
      style="height: -258px;"
    >
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependency with long name 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-medium">
              lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              ^1.0.0
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
              peer
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div
      class="absolute -left-[9px] bottom-[62px] z-0 h-[13.35rem] h-[5px] w-[9px] rounded-bl-sm border-b border-l border-solid border-muted group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24"
      style="height: -258px;"
    >
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              ^1.0.0
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;

exports[`SideItem render as git dependency 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              github:vltpkg/item
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div
      class="absolute -left-[9px] bottom-[62px] z-0 h-[13.35rem] h-[5px] w-[9px] rounded-bl-sm border-b border-l border-solid border-muted group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24"
      style="height: -258px;"
    >
    </div>
  </div>
</div>

`;

exports[`SideItem render as multi-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute left-2 top-2 h-full w-[96%] rounded-lg border bg-card transition-all group-hover:bg-card-accent">
    </div>
    <div class="absolute left-1 top-1 h-full w-[98%] rounded-lg border bg-card transition-all group-hover:bg-card-accent">
    </div>
    <gui-card
      role="article"
      classname="relative my-4 transition-all  group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              ^1.0.0
            </span>
            <span>
              and 4 more.
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;

exports[`SideItem render as parent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all border-muted group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              ^1.0.0
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute -right-4 top-7 w-4 border-t border-muted">
    </div>
  </div>
</div>

`;

exports[`SideItem render as two-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute left-1 top-1 h-full w-[98%] rounded-lg border bg-card transition-all group-hover:bg-card-accent">
    </div>
    <gui-card
      role="article"
      classname="relative my-4 transition-all  group-hover:bg-card-accent"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="align-baseline text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground bg-transparent">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="mx-1 rounded-sm px-1.5 py-1 pt-1.5 text-xs font-normal font-courier text-muted-foreground dark:bg-neutral-700/50 bg-neutral-700/5 border-none">
              ^1.0.0
            </span>
            <span>
              and 1 more.
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;
